--- a/tabakoapp/package.json
+++ b/tabakoapp/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.8.2",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "quagga": "^0.12.1",
     "vite": "^4.0.0"
   }
 }
