--- a/tabakoapp/package.json
+++ b/tabakoapp/package.json
@@ -12,8 +12,8 @@
     "axios": "^1.2.5",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
-    "vue-qrcode-reader": "^3.1.0"
-
+    "vue-qrcode-reader": "^3.1.0",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
