--- a/tabakoapp/package.json
+++ b/tabakoapp/package.json
@@ -13,7 +13,8 @@
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-qrcode-reader": "^3.1.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-charts": "^1.1.32"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
