--- a/tabakoapp/package.json
+++ b/tabakoapp/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.2.0",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
+    "vue-barcode-reader": "^1.0.3",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^4.1.6",
     "vue3-charts": "^1.1.32"
